# internpulse_product_management

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
app/routers/: product.py
tests/: test_product.py
